alignment fix

--- a/style.css
+++ b/style.css
@@ -206,22 +206,22 @@ canvas {
 
 @keyframes scaleUp {
   0% {
-    transform:scale(.8);
+    transform:scale(.8) translate(-50%,-50%);
     opacity:0;
   }
   100% {
-    transform:scale(1);
+    transform:scale(1) translate(-50%,-50%);
     opacity:1;
   }
 }
 
 @keyframes scaleDown {
   0% {
-    transform:scale(1);
+    transform:scale(1) translate(-50%,-50%);
     opacity:1;
   }
   100% {
-    transform:scale(.8);
+    transform:scale(.8) translate(-50%,-50%);
     opacity:0;
   }
 }
